--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -196,6 +196,7 @@
                 </div>
                 
                 <div class="d-grid gap-2 col-6 mx-auto">
+                    <a href="la_siberia_original/Bootstrap/menu.html" style="text-decoration: none;">
                     <button class="btn btn-primary" style="background-color: deeppink; border: none; margin: 30px;" type="button">See Full Menu</button>
                 </div>
                 
