--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -198,7 +198,7 @@
                 
                 <div class="d-grid gap-2 col-6 mx-auto">
                     <a href="Bootstrap/menu.html" style="text-decoration: none;">
-                    <button class="btn btn-primary" style="background-color: deeppink; border: none; margin: 30px;" type="button">See Full Menu</button>
+                    <button class="btn btn-primary" style="background-color: #ffff00; border: none; margin: 30px; color: #800000" type="button">See Full Menu</button>
                 </div>
                 
 
