--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -56,7 +56,11 @@
         <section id="to-top">
             
         </section>
-        
+        <style>
+        body {
+            background-color: #800000; /* Change to your desired background color */
+        }
+    </style>
         <!-- Header -->
         <div>
             <header id="header_id">
