--- a/DRAFT/index.html
+++ b/DRAFT/index.html
@@ -258,7 +258,7 @@
             <span>Caldo de Pollo</span><span>$9.99</span>
         </div>
         <div class="menu-ingredients">
-            Calabaza, zanahoria, papa, repollo, pierna <br>y muslo con arroz y (3) tortillas. <br>Acompañado de Chips y Salsa Chipotle.
+            Calabaza, zanahoria, papa, repollo, pierna y muslo con arroz y (3) tortillas. Acompañado de Chips y Salsa Chipotle.
         </div>
     </div>
 
@@ -267,7 +267,7 @@
             <span>Caldo Tlalpeño</span><span>$9.99</span>
         </div>
         <div class="menu-ingredients">
-            Arroz, pechuga de pollo, calabaza, zanahoria, <br>garbanzo, queso mozzarella y aguacate.<br> Acompañado de Chips y Salsa Chipotle.
+            Arroz, pechuga de pollo, calabaza, zanahoria, garbanzo, queso mozzarella y aguacate. Acompañado de Chips y Salsa Chipotle.
         </div>
     </div>
 </div>
