Update for Address Link

--- a/DRAFT/index.html
+++ b/DRAFT/index.html
@@ -968,7 +968,11 @@
                             <div class="address">
                                 <i class="bi bi-geo-alt"></i>
                                 <h4>Location:</h4>
-                                <p>400 E Alton Gloor Blvd, Brownsville, TX 78526 </p>
+                                <a href='https://maps.google.com/?q=400 E Alton Gloor Blvd STE A, Brownsville, TX 78526'>
+                                    <a href='https://maps.apple.com/maps?q=400 E Alton Gloor Blvd STE A, Brownsville, TX 78526'>
+                                    <p>400 E Alton Gloor Blvd STE A, Brownsville, TX 78526</p>
+                                    </a>
+                                </a>
                             </div>
 
                             <div class="open-hours">
