--- a/DRAFT/index.html
+++ b/DRAFT/index.html
@@ -245,51 +245,57 @@
                         </div>
                     </div>
 
-    <div class="col-lg-6 menu-item filter-specialty">
-        <div class="menu-content">
-            <span>Vegetales (3)</span><span>$7.75</span>
-        </div>
-        <div class="menu-ingredients">
-            (Calabaza y Zanahoria) Acompañados de Frijoles y Ensalada de Lechuga
-        </div>
-    </div>
-        
-    </div>
-	</div>
-	<br>
-	<br>
-<div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
-    <center> <div class="menu-title">Caldos</div> </center>
-	
-    <div class="col-lg-6 menu-item filter-Caldos">
-        <div class="menu-content">
-            <span>Caldo de Pollo</span><span>$9.99</span>
-        </div>
-        <div class="menu-ingredients">
-            Calabaza, zanahoria, papa, repollo, pierna <br>y muslo con arroz y (3) tortillas. <br>Acompañado de Chips y Salsa Chipotle.
-        </div>
-    </div>
+                    <div class="col-lg-6 menu-item filter-specialty">
+                        <div class="menu-content">
+                            <span>Vegetales (3)</span><span>$7.75</span>
+                        </div>
 
-    <div class="col-lg-6 menu-item filter-Caldos">
-        <div class="menu-content">
-            <span>Caldo Tlalpeño</span><span>$9.99</span>
-        </div>
-        <div class="menu-ingredients">
-            Arroz, pechuga de pollo, calabaza, zanahoria, <br>garbanzo, queso mozzarella y aguacate.<br> Acompañado de Chips y Salsa Chipotle.
-        </div>
-    </div>
-</div>
-<br>
-<div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
-  <center>  <div class="menu-title">Taco Siberia</div></center>
-    <div class="col-lg-6 menu-item filter-tacos">
-        <div class="menu-content">
-            <span>Taco de Pollo</span><span>$6.25</span>
-        </div>
-        <div class="menu-ingredients">
-            Taco de pollo tierno.
-        </div>
-    </div>
+                        <div class="menu-ingredients">
+                            (Calabaza y Zanahoria) Acompañados de Frijoles y Ensalada de Lechuga
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
+                    <center> <div class="menu-title">Caldos</div> </center>
+
+                    <div class="col-lg-6 menu-item filter-Caldos">
+                        <div class="menu-content">
+                            <span>Caldo de Pollo</span><span>$9.99</span>
+                        </div>
+
+                        <div class="menu-ingredients">
+                            Calabaza, zanahoria, papa, repollo, pierna <br>y muslo con arroz y (3) tortillas. <br>Acompañado de Chips y Salsa Chipotle.
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 menu-item filter-Caldos">
+                        <div class="menu-content">
+                            <span>Caldo Tlalpeño</span><span>$9.99</span>
+                        </div>
+
+                        <div class="menu-ingredients">
+                            Arroz, pechuga de pollo, calabaza, zanahoria, <br>garbanzo, queso mozzarella y aguacate.<br> Acompañado de Chips y Salsa Chipotle.
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
+                    <center>  <div class="menu-title">Taco Siberia</div></center>
+
+                    <div class="col-lg-6 menu-item filter-tacos">
+                        <div class="menu-content">
+                            <span>Taco de Pollo</span><span>$6.25</span>
+                        </div>
+
+                        <div class="menu-ingredients">
+                            Taco de pollo tierno.
+                        </div>
+                    </div>
 
                     <div class="col-lg-6 menu-item filter-tacos">
                         <div class="menu-content">
@@ -1009,7 +1015,7 @@
                             <div class="footer-info">
                                 <h3>La Siberia Original</h3>
                                 <p>
-                                400 E Alton Gloor Blvd <br>
+                                400 E Alton Gloor Blvd STE A<br>
                                 Brownsville, TX 78526<br><br>
                                 <strong>Phone:</strong> +1 956 465 6195 <br>
                                 </p>
